<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/mainlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile"
            />
        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/hintime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ime"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/ime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/hintprezime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prezime"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/prezime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/hintpredmet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naziv_predmeta"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/predmet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                android:layout_weight="5"/>
        </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>